tests/errors/arr_contains_struct.vt
struct P { x: int; y: int; }
fn main() { let a: P[] = [P(1,2)]; print("" + a.contains(P(1,2))); }
